syntax = "proto3";

package calc;
option go_package="calcpb";

message GreetRequest {
    int32 greeting_first = 1;
    int32 greeting_second = 2;
}

message GreetResponse {
    int32 result = 1;
}

service GreetService {
    rpc Greet (GreetRequest) returns (GreetResponse) {};
}